# plox

./: README.md  pyproject.toml
src/plox/: __init__.py  ast_printer.py  environment.py  expr.py  expressions.py  interpreter.py  parser.py  scanner.py  stmt.py
tests/: test_scanner.py
